--- a/img/buc-thu.html
+++ b/img/buc-thu.html
@@ -16,7 +16,7 @@
             <div>Mẹ hãy viết vài dòng khích lệ các mẹ trên hội trong ngày hôm nay hoặc ngày mai, để tiếp thêm động lực cho các mẹ, mẹ nhé. Sau khi mẹ post xong, mẹ hãy chụp hình gửi cho chị, chị sẽ gửi quà liền cho mẹ nha.</div>
                 
             <br>
-            <div>Gợi ý cách viết cho mẹ: Em đã thành công rồi. Chúc các mẹ hội ta thành công, như ý. Kiên trì và tin tưởng chị Minh Thủy các mẹ nhé ♥️</div>
+            <div>Gợi ý cách viết cho mẹ: Em đã thành công rồi. Chúc các mẹ hội ta thành công, như ý. Kiên trì và tin tưởng chị Minh Thúy các mẹ nhé ♥️</div>
         </div>
         <div class="header_catalog">
             <div class="cataTxt">Quà tặng cho mẹ và bé</div>
